Increased java mem in elasticsearch

--- a/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
+++ b/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
@@ -1,7 +1,8 @@
 input {
   file {
     path => "/billing/**/billing-20*"
-    sincedb_path => "/var/tmp/sincedb-dcache"
+    #sincedb_path => "/var/tmp/sincedb-dcache"
+    sincedb_path => "/dev/null"
     # uncomment next line if you want to import existing data
     start_position => beginning
     # uncomment next line to import files with logstash 2.2.x
