--- a/configs/ship_composer/docker-elk.yml
+++ b/configs/ship_composer/docker-elk.yml
@@ -12,7 +12,8 @@ services:
       - \"9200:9200\"
       - \"9300:9300\"
     environment:
-      ES_JAVA_OPTS: \"-Xmx5g -Xms5g -XX:NewSize=16g -XX:MaxNewSize=16g -XX:MaxTenuringThreshold=2 -XX:SurvivorRatio=30\"
+      #ES_JAVA_OPTS: \"-Xmx5g -Xms5g -XX:NewSize=16g -XX:MaxNewSize=16g -XX:MaxTenuringThreshold=2 -XX:SurvivorRatio=30\"
+      ES_JAVA_OPTS: \"-Xmx10g -Xms10g\"
     networks:
       - elk
 
