Updated kibana and ES versions

--- a/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
+++ b/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
@@ -41,6 +41,7 @@ filter {
       named_captures_only => true
       remove_field => [ "message" ]
       tag_on_failure => [ "_parse_dcache_failure00" ]
+
     }
 
   } # End of if else
@@ -58,6 +59,13 @@ filter {
   #    "is_write", "false", "read"
   #  ]
   #}
+
+  if [remote_host] {
+   geoip {
+   	source => "remote_host"
+   }
+  }
+
 }
 
 output {
