--- a/configs/customs/GoeGridELK/kibana/kibana.yml
+++ b/configs/customs/GoeGridELK/kibana/kibana.yml
@@ -13,6 +13,6 @@ elasticsearch.url: http://__SITE__elasticsearch:9200
 xpack.security.enabled: false
 xpack.monitoring.enabled: false
 xpack.ml.enabled: false
-xpack.graph.enabled: false
+xpack.graph.enabled: true
 xpack.reporting.enabled: false
 xpack.grokdebugger.enabled: false
