Fixed a bug of billing_year issue

--- a/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
+++ b/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
@@ -1,6 +1,6 @@
 input {
   file {
-    path => "/billing/**/billing-20*"
+    path => "/billing/**/billing-*"
     #sincedb_path => "/var/tmp/sincedb-dcache"
     sincedb_path => "/dev/null"
     # uncomment next line if you want to import existing data
@@ -46,9 +46,19 @@ filter {
 
   } # End of if else
 
+  ## Taking "year" from billing file name
+  grok {
+    match => ["path", "/billing/.*/billing-%{YEAR:billing_year}\..*"]
+  }
 
+  ## Adding billing_year to billing_time 
+  mutate {
+    update => { "billing_time" => "%{billing_year}.%{billing_time}" }
+  }
+
+  ## Set datetime here
   date {
-    match => [ "billing_time", "MM.dd HH:mm:ss" ]
+    match => [ "billing_time", "YYYY.MM.dd HH:mm:ss" ]
     timezone => "CET"
     remove_field => [ "billing_time" ]
   }
@@ -71,7 +81,7 @@ filter {
 output {
   elasticsearch {
     hosts => "__SITE__elasticsearch:9200"
-    index => "dcache-billing-%{+YYYY.MM.dd}"
+    index => "dcache-billing-%{billing_year}.%{+MM.dd}"
     template_name => "billing"
     #protocol => "http"
   }
