Fixed a bug in a file definition of billing logs

--- a/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
+++ b/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
@@ -1,6 +1,6 @@
 input {
   file {
-    path => "/billing/**/billing-*"
+    path => "/billing/**/billing-20*"
     #sincedb_path => "/var/tmp/sincedb-dcache"
     sincedb_path => "/dev/null"
     # uncomment next line if you want to import existing data
@@ -48,7 +48,7 @@ filter {
 
   ## Taking "year" from billing file name
   grok {
-    match => ["path", "/billing/.*/billing-%{YEAR:billing_year}\..*"]
+    match => ["path", "/billing/%{YEAR:billing_year}/.*/billing-.*"]
   }
 
   ## Adding billing_year to billing_time 
