Updated index schema

--- a/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
+++ b/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
@@ -81,7 +81,8 @@ filter {
 output {
   elasticsearch {
     hosts => "__SITE__elasticsearch:9200"
-    index => "dcache-billing-%{billing_year}.%{+MM.dd}"
+    #index => "dcache-billing-%{billing_year}.%{+MM.dd}"
+    index => "dcache-billing-%{billing_year}.%{+MM}"
     template_name => "billing"
     #protocol => "http"
   }
