Updating Logstash configuration to enable geo_point term

--- a/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
+++ b/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
@@ -63,25 +63,20 @@ filter {
     remove_field => [ "billing_time" ]
   }
 
-  #alter {
-  #  condrewrite => [
-  #    "is_write", "true", "write",
-  #    "is_write", "false", "read"
-  #  ]
-  #}
-
+  ## Geo Location
   if [remote_host] {
    geoip {
    	source => "remote_host"
    }
+
   }
+
 
 }
 
 output {
   elasticsearch {
     hosts => "__SITE__elasticsearch:9200"
-    #index => "dcache-billing-%{billing_year}.%{+MM.dd}"
     index => "dcache-billing-%{billing_year}.%{+MM}"
     template_name => "billing"
     #protocol => "http"
