--- a/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
+++ b/configs/customs/GoeGridELK/logstash/pipeline/logstash.conf
@@ -69,6 +69,10 @@ filter {
    	source => "remote_host"
    }
 
+   mutate {
+      convert => {"[geoip][location][lat]" => "float"}
+      convert => {"[geoip][location][lon]" => "float"}
+   }
   }
 
 
