--- a/configs/customs/GoeGridELK/kibana/kibana.yml
+++ b/configs/customs/GoeGridELK/kibana/kibana.yml
@@ -3,16 +3,18 @@
 ## from https://github.com/elastic/kibana-docker/blob/master/build/kibana/config/kibana.yml
 #
 server.name: kibana
-server.host: "0"
-elasticsearch.url: http://__SITE__elasticsearch:9200
+server.port: 5601
+server.host: "localhost"
+elasticsearch.hosts: ["http://__SITE__elasticsearch:9200"]
+#elasticsearch.url: http://__SITE__elasticsearch:9200
 
 ## Disable X-Pack
 ## see https://www.elastic.co/guide/en/x-pack/current/xpack-settings.html
 ##     https://www.elastic.co/guide/en/x-pack/current/installing-xpack.html#xpack-enabling
 #
-xpack.security.enabled: false
-xpack.monitoring.enabled: false
-xpack.ml.enabled: false
-xpack.graph.enabled: true
-xpack.reporting.enabled: false
-xpack.grokdebugger.enabled: false
+#xpack.security.enabled: false
+#xpack.monitoring.enabled: false
+#xpack.ml.enabled: false
+#xpack.graph.enabled: true
+#xpack.reporting.enabled: false
+#xpack.grokdebugger.enabled: false
