--- a/templates/docker-elk/elasticsearch/Dockerfile
+++ b/templates/docker-elk/elasticsearch/Dockerfile
@@ -1,6 +1,8 @@
 # https://github.com/elastic/elasticsearch-docker
 #FROM docker.elastic.co/elasticsearch/elasticsearch:5.6.3
-FROM docker.elastic.co/elasticsearch/elasticsearch:6.3.2
+#FROM docker.elastic.co/elasticsearch/elasticsearch:6.3.2
+FROM docker.elastic.co/elasticsearch/elasticsearch:7.2.0
 
 # Add your elasticsearch plugins setup here
 # Example: RUN elasticsearch-plugin install analysis-icu
+
